--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -1,3 +1,22 @@
+@keyframes appear {
+  0% {
+    /*transform: translateY(-100%);*/
+    opacity: 0;
+  }
+  100% {
+    /*transform: translateY(0);*/
+    opacity: 100%;
+  }
+}
+
+html {
+  font-size: 14px;
+}
+
+main {
+  animation: 650ms ease-out 0s 1 appear;
+}
+
 body {
   padding-top: 5rem;
   font-size: 1.3rem;
@@ -32,4 +51,24 @@ td {
   border: none;
   text-align: center !important;
   vertical-align: middle !important;
+}
+
+.blinker {
+  height: 32px;
+  margin-bottom: -4px;
+  margin-left: 0.2rem;
+  width: 10px;
+  background: dodgerblue;
+  opacity: 0;
+  display: inline-block;
+  animation: blink 1s linear infinite alternate;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
