--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -72,3 +72,17 @@ td {
     opacity: 1;
   }
 }
+
+.popup-container {
+  z-index: 10001;
+  position: absolute;
+  width: 85%;
+  height: 75%;
+  margin: auto;
+  background-color: papayawhip;
+  border-radius: 1.5rem;
+  padding: 1.5rem;
+
+  -webkit-box-shadow: 0px 0px 500px 500px rgba(0,0,0,0.52);
+  box-shadow: 0px 0px 500px 500px rgba(0,0,0,0.52);
+}
