--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -87,8 +87,6 @@ td {
     opacity: 1;
   }
 }
-<<<<<<< HEAD
-=======
 
 .popup-container {
   z-index: 10001;
@@ -100,7 +98,6 @@ td {
   border-radius: 1.5rem;
   padding: 1.5rem;
 
-  -webkit-box-shadow: 0px 0px 500px 500px rgba(0,0,0,0.52);
-  box-shadow: 0px 0px 500px 500px rgba(0,0,0,0.52);
+  -webkit-box-shadow: 0px 0px 500px 500px rgba(0, 0, 0, 0.52);
+  box-shadow: 0px 0px 500px 500px rgba(0, 0, 0, 0.52);
 }
->>>>>>> 2745cd963b09bba149e9457fa847904eab3da050
