--- a/client/src/components/head.html
+++ b/client/src/components/head.html
@@ -1,8 +1,5 @@
 <meta charset="utf-8" />
-<meta
-  name="viewport"
-  content="width=device-width, initial-scale=1, shrink-to-fit=no"
-/>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <link rel="icon" href="../../assets/img/favicon.png" />
 
 <title>Warehouse counter</title>
@@ -37,3 +34,4 @@
 
 <script src="../../assets/js/table_generator.js"></script>
 <script src="../../assets/js/request.js"></script>
+<script src="../../assets/js/record_edit.js"></script>
