--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -44,7 +44,20 @@ body {
   background-color: #7da8c5 !important;
   color: white !important;
 }
-.btn {
+
+/* Dropdown */
+.dropdown-menu > li:hover {
+  background-color: #7da8c5;
+}
+.dropdown-menu > li > a {
+  font-weight: 600;
+  color: #7da8c5;
+}
+.dropdown-menu > li:hover > a {
+  color: #7da8c5;
+}
+#flexCheckChecked {
+  cursor: pointer;
 }
 /* Table */
 tr:hover,
@@ -72,6 +85,7 @@ td {
   vertical-align: middle !important;
 }
 
+/* Blinker */
 .blinker {
   height: 32px;
   margin-bottom: -4px;
@@ -92,6 +106,7 @@ td {
   }
 }
 
+/* Popup */
 .popup-container {
   z-index: 10001;
   position: absolute;
