--- a/client/src/components/head.html
+++ b/client/src/components/head.html
@@ -17,6 +17,14 @@
   crossorigin="anonymous"
 />
 
+<!-- Optional theme -->
+<link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
+  integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ"
+  crossorigin="anonymous"
+/>
+
 <!-- Latest compiled and minified JavaScript -->
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
