--- a/client/src/components/head.html
+++ b/client/src/components/head.html
@@ -5,7 +5,7 @@
 <title>Warehouse counter</title>
 
 <!-- Common styles -->
-<link href="../../assets/css/common.css" rel="stylesheet" />
+<link href="../../assets/css/common.css?12" rel="stylesheet" />
 
 <!-- Bootstrap 5 -->
 
