--- a/client/src/components/head.html
+++ b/client/src/components/head.html
@@ -5,7 +5,7 @@
 <title>Warehouse counter</title>
 
 <!-- Common styles -->
-<link href="../../assets/css/common.css?12" rel="stylesheet" />
+<link href="../../assets/css/common.css?1323" rel="stylesheet" />
 
 <!-- Bootstrap 5 -->
 
@@ -25,6 +25,8 @@
   crossorigin="anonymous"
 />
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 <!-- Latest compiled and minified JavaScript -->
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -32,6 +34,6 @@
   crossorigin="anonymous"
 ></script>
 
-<script src="../../assets/js/request.js"></script>
-<script src="../../assets/js/table_generator.js"></script>
-<script src="../../assets/js/record_edit.js"></script>
+<script src="../../assets/js/request.js?1223"></script>
+<script src="../../assets/js/table_generator.js?1223"></script>
+<script src="../../assets/js/record_edit.js?1223"></script>
