--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -1,186 +1,186 @@
 @keyframes appear {
-    0% {
-        /*transform: translateY(-100%);*/
-        opacity: 0;
-    }
-    100% {
-        /*transform: translateY(0);*/
-        opacity: 100%;
-    }
+  0% {
+    /*transform: translateY(-100%);*/
+    opacity: 0;
+  }
+  100% {
+    /*transform: translateY(0);*/
+    opacity: 100%;
+  }
 }
 
 html {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 main {
-    animation: 650ms ease-out 0s 1 appear;
+  animation: 650ms ease-out 0s 1 appear;
 }
 
 body {
-    padding-top: 5rem;
+  padding-top: 5rem;
 }
 
 /* Header */
 .header {
-    text-align: center;
-    font-size: 50px;
-    font-weight: 800;
-    color: #7da8c5;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 800;
+  color: #7da8c5;
 }
 
 /* Sub header */
 .sub-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
 }
 
 /* Buttons */
 .styled-btn {
-    padding: 10px 15px 10px 15px !important;
-    background-color: white !important;
-    border: 5px solid #7da8c5 !important;
-    color: #7da8c5 !important;
-    font-weight: 800 !important;
+  padding: 10px 15px 10px 15px !important;
+  background-color: white !important;
+  border: 5px solid #7da8c5 !important;
+  border-radius: 10px;
+  color: #7da8c5 !important;
+  font-weight: 800 !important;
 }
 .styled-btn:hover {
-    background-color: #7da8c5 !important;
-    color: white !important;
+  background-color: #7da8c5 !important;
+  color: white !important;
 }
 
 /* Dropdown */
 .dropdown-menu > li:hover {
-    background-color: #7da8c5;
+  background-color: #7da8c5;
 }
 .dropdown-menu > li > a {
-    font-weight: 600;
-    color: #7da8c5;
+  font-weight: 600;
+  color: #7da8c5;
 }
 .dropdown-menu > li:hover > a {
-    color: #7da8c5;
+  color: #7da8c5;
 }
 #flexCheckChecked {
-    cursor: pointer;
+  cursor: pointer;
 }
 /* Table */
 tr:hover,
 tr:hover {
-    background-color: #e0f5ff;
+  background-color: #e0f5ff;
 }
 td:hover {
-    background-color: #bed6e5 !important;
+  background-color: #bed6e5 !important;
 }
 th {
-    text-align: center !important;
-    vertical-align: middle !important;
-    background-color: #7da8c5 !important;
-    color: white !important;
+  text-align: center !important;
+  vertical-align: middle !important;
+  background-color: #7da8c5 !important;
+  color: white !important;
 }
 th:hover {
-    background-color: #48a7d6 !important;
+  background-color: #48a7d6 !important;
 }
 
 td {
-    max-width: 300px;
-    word-wrap: break-word;
-    border: none;
-    text-align: center !important;
-    vertical-align: middle !important;
+  max-width: 300px;
+  word-wrap: break-word;
+  border: none;
+  text-align: center !important;
+  vertical-align: middle !important;
 }
 
 .form-control {
-    padding: 0 .75rem !important;
+  padding: 0 0.75rem !important;
 }
 
 /* Blinker */
 .blinker {
-    height: 32px;
-    margin-bottom: -4px;
-    margin-left: 0.2rem;
-    width: 10px;
-    background: dodgerblue;
-    opacity: 0;
-    display: inline-block;
-    animation: blink 650ms linear infinite alternate;
+  height: 32px;
+  margin-bottom: -4px;
+  margin-left: 0.2rem;
+  width: 10px;
+  background: dodgerblue;
+  opacity: 0;
+  display: inline-block;
+  animation: blink 650ms linear infinite alternate;
 }
 
 @keyframes blink {
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 /* Popup */
 .popup-container {
-    position: fixed;
-    top: 0;
-    left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-    z-index: 10001;
-    padding: 6rem;
-    width: 100%;
-    height: 100%;
+  z-index: 10001;
+  padding: 6rem;
+  width: 100%;
+  height: 100%;
 
-    background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .popup {
-    z-index: 10002;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    border-radius: 1.5rem;
+  z-index: 10002;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 1.5rem;
 
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    align-content: center;
-
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
 }
 
 .card-section {
-    width: 100%;
-    flex: 1 1 auto;
-    padding: 0 1rem;
+  width: 100%;
+  flex: 1 1 auto;
+  padding: 0 1rem;
 
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .form-holder {
-    overflow: scroll;
-    height: 100%;
+  overflow: scroll;
+  height: 100%;
 
-    padding-top: 2.75rem;
+  padding-top: 2.75rem;
 }
 
-
 .exit-button-wrapper {
-    text-align: right;
+  text-align: right;
 
-    -webkit-box-shadow: 0 5px 16px -6px #444444;
-    box-shadow: 0 5px 16px -6px #444444;
+  -webkit-box-shadow: 0 5px 16px -6px #444444;
+  box-shadow: 0 5px 16px -6px #444444;
 
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    align-content: stretch;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: stretch;
 }
 
 .exit-button {
-    font-weight: bolder;
-    font-size: xx-large;
-    cursor: pointer;
+  font-weight: bolder;
+  font-size: xx-large;
+  cursor: pointer;
 }
 
 .card-header-title {
-    margin-left: 1rem;
-    font-size: 2.5rem;
-    font-weight: 800;
-    color: #52667a;
+  margin-left: 1rem;
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: #52667a;
 }
