--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -40,14 +40,41 @@ body {
 .styled-btn {
   padding: 10px 15px 10px 15px !important;
   background-color: white !important;
-  border: 5px solid #7da8c5 !important;
   border-radius: 10px;
-  color: #7da8c5 !important;
   font-weight: 800 !important;
 }
 .styled-btn:hover {
-  background-color: #7da8c5 !important;
   color: white !important;
+}
+
+.popup-buttons-wrapper {
+  margin-top: 10px;
+}
+.styled-btn > img {
+  width: 30px;
+  height: 30px;
+  height: auto;
+}
+.btn-blue {
+  border: 5px solid #7da8c5 !important;
+  color: #7da8c5 !important;
+}
+.btn-blue:hover {
+  background-color: #7da8c5 !important;
+}
+.btn-red {
+  border: 5px solid #f4d7d7 !important;
+  color: #f4d7d7 !important;
+}
+.btn-red:hover {
+  background-color: #f4d7d7 !important;
+}
+.btn-yellow {
+  border: 5px solid #ffe680 !important;
+  color: #ffe680 !important;
+}
+.btn-yellow:hover {
+  background-color: #ffe680 !important;
 }
 
 /* Dropdown */
@@ -135,7 +162,7 @@ td {
   height: 100%;
   background-color: white;
   border-radius: 1.5rem;
-    padding-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
 
   display: flex;
   flex-flow: column nowrap;
@@ -155,15 +182,15 @@ td {
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .form-holder::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .form-holder {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-    overflow: scroll;
-    height: 100%;
-    padding-top: 1.75rem;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  overflow: scroll;
+  height: 100%;
+  padding-top: 1.75rem;
 }
 
 .exit-button-wrapper {
@@ -193,14 +220,9 @@ td {
 }
 
 .popup-buttons-wrapper {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-
-.button-image {
-    width: 70px;
-    height: auto;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
