--- a/client/src/components/head.html
+++ b/client/src/components/head.html
@@ -7,6 +7,8 @@
 <!-- Common styles -->
 <link href="../../assets/css/common.css?13323" rel="stylesheet" />
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+
 <!-- Bootstrap 5 -->
 
 <!-- Latest compiled and minified CSS -->
@@ -25,7 +27,7 @@
   crossorigin="anonymous"
 />
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
 
 <!-- Latest compiled and minified JavaScript -->
 <script
