--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -61,6 +61,7 @@ body {
 }
 .btn-blue:hover {
   background-color: #7da8c5 !important;
+  text-decoration: none;
 }
 .btn-red {
   border: 5px solid #f4d7d7 !important;
@@ -68,6 +69,15 @@ body {
 }
 .btn-red:hover {
   background-color: #f4d7d7 !important;
+  text-decoration: none;
+}
+.btn-red-dark {
+  border: 5px solid #d35f5f !important;
+  color: #d35f5f !important;
+}
+.btn-red-dark:hover {
+  background-color: #d35f5f !important;
+  text-decoration: none;
 }
 .btn-yellow {
   border: 5px solid #ffe680 !important;
@@ -75,6 +85,7 @@ body {
 }
 .btn-yellow:hover {
   background-color: #ffe680 !important;
+  text-decoration: none;
 }
 .btn-green {
   border: 5px solid #90de87 !important;
@@ -82,6 +93,7 @@ body {
 }
 .btn-green:hover {
   background-color: #90de87 !important;
+  text-decoration: none;
 }
 .btn-orange {
   border: 5px solid #ffccaa !important;
@@ -89,8 +101,12 @@ body {
 }
 .btn-orange:hover {
   background-color: #ffccaa !important;
+  text-decoration: none;
 }
-
+/* Text */
+.weight-800 {
+  font-weight: 800;
+}
 /* Dropdown */
 .dropdown-menu > li:hover {
   background-color: #7da8c5;
@@ -141,7 +157,7 @@ td {
   margin-bottom: -4px;
   margin-left: 0.2rem;
   width: 10px;
-  background: dodgerblue;
+  background: #7da8c5;
   opacity: 0;
   display: inline-block;
   animation: blink 650ms linear infinite alternate;
@@ -239,4 +255,12 @@ td {
   justify-content: center;
   align-items: center;
   align-content: center;
+}
+
+/* Atomized */
+.text-align-center {
+  text-align: center;
+}
+.no-text-decoration {
+  text-decoration: none;
 }
