--- a/client/src/components/head.html
+++ b/client/src/components/head.html
@@ -39,3 +39,4 @@
 <script src="../../assets/js/request.js?122334"></script>
 <script src="../../assets/js/table_generator.js?123234"></script>
 <script src="../../assets/js/record_edit.js?123234"></script>
+<script src="../../assets/js/append_img_request_state.js?123234"></script>
