Activated debug mode for the API

--- a/client/src/components/head.html
+++ b/client/src/components/head.html
@@ -36,7 +36,7 @@
   crossorigin="anonymous"
 ></script>
 
-<script src="../../assets/js/request.js?122334"></script>
-<script src="../../assets/js/table_generator.js?123234"></script>
-<script src="../../assets/js/record_edit.js?123234"></script>
-<script src="../../assets/js/append_img_request_state.js?123234"></script>
+<script src="../../assets/js/request.js?1223534"></script>
+<script src="../../assets/js/table_generator.js?1323234"></script>
+<script src="../../assets/js/record_edit.js?1232334"></script>
+<script src="../../assets/js/append_img_request_state.js?1283234"></script>
