--- a/client/src/components/head.html
+++ b/client/src/components/head.html
@@ -36,7 +36,8 @@
   crossorigin="anonymous"
 ></script>
 
-<script src="../../assets/js/request.js?122334"></script>
-<script src="../../assets/js/table_generator.js?123234"></script>
-<script src="../../assets/js/record_edit.js?123234"></script>
-<script src="../../assets/js/append_img_request_state.js?123234"></script>
+<script src="../../assets/js/request.js?12232555334"></script>
+<script src="../../assets/js/table_generator.js?15532253234"></script>
+<script src="../../assets/js/record_edit.js?12553453234"></script>
+<script src="../../assets/js/append_img_request_state.js?15324232534"></script>
+<script src="../../assets/js/queries.js?13254232534"></script>
