--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -115,6 +115,18 @@ body {
 .margin-10 {
   margin: 10px 10px 10px 10px;
 }
+.margin-top-20 {
+  margin-top: 20px;
+}
+.margin-left-10 {
+  margin-left: 10px;
+}
+.margin-right-10 {
+  margin-right: 10px;
+}
+.margin-bottom-10 {
+  margin-bottom: 10px;
+}
 /* Dropdown */
 .dropdown-menu > li:hover {
   background-color: #7da8c5;
@@ -214,8 +226,8 @@ td {
   flex: 1 1 auto;
   padding: 0 1rem;
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
