--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -154,6 +154,7 @@ th {
   vertical-align: middle !important;
   background-color: #7da8c5 !important;
   color: white !important;
+  max-width: 5rem;
 }
 th:hover {
   background-color: #48a7d6 !important;
@@ -286,10 +287,10 @@ td {
 }
 
 .code-name-divider {
-  margin: 0 .2rem;
+  margin: 0 0.2rem;
   display: inline-block;
-  width: .3rem;
-  height: .25rem;
+  width: 0.3rem;
+  height: 0.25rem;
 
   font-weight: 500;
 }
