--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -155,6 +155,7 @@ th {
   background-color: #7da8c5 !important;
   color: white !important;
   max-width: 5rem;
+  min-width: 3rem;
 }
 th:hover {
   background-color: #48a7d6 !important;
@@ -207,7 +208,7 @@ td {
   background: rgba(0, 0, 0, 0.5);
 }
 
-.popup {
+#popup {
   z-index: 10002;
   width: 100%;
   height: 100%;
