--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -228,8 +228,8 @@ td {
   flex: 1 1 auto;
   padding: 0 1rem;
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -243,7 +243,6 @@ td {
   overflow: scroll;
   height: 100%;
   padding-top: 1.75rem;
-
 }
 
 .exit-button-wrapper {
