--- a/client/src/assets/css/common.css
+++ b/client/src/assets/css/common.css
@@ -202,6 +202,11 @@ td {
     padding: 0 0.75rem !important;
 }
 
+#dynamic-locations-table-container > th,
+#dynamic-locations-table-container > td {
+    font-size: 1rem;
+}
+
 /* Blinker */
 .blinker {
     height: 32px;
@@ -258,7 +263,7 @@ td {
     padding: 0 1rem;
 
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
+        "Noto Color Emoji";
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
