--- a/client/src/assets/css/zeynep-main.css
+++ b/client/src/assets/css/zeynep-main.css
@@ -110,14 +110,14 @@ main {
 }
 
 .zeynep ul > li.has-submenu > a {
-  background-image: url("../img/submenu-arrow.svg");
+  background-image: url("../images/submenu-arrow.svg");
   background-position: right 20px center;
   background-repeat: no-repeat;
   background-size: 8px 14px;
 }
 
 .zeynep ul > li.has-submenu > a:hover {
-  background-image: url("../img/submenu-arrow-active.svg");
+  background-image: url("../images/submenu-arrow-active.svg");
 }
 
 /* zeynepjs submenu styles */
@@ -127,7 +127,7 @@ main {
 }
 
 .zeynep .submenu-header {
-  background-image: url("../img/menu-back.svg");
+  background-image: url("../images/menu-back.svg");
   background-position: left 20px center;
   background-repeat: no-repeat;
   background-size: 8px 14px;
@@ -146,7 +146,7 @@ main {
 }
 
 .zeynep .submenu-header > a:before {
-  background-image: url("../img/submenu-arrow.svg");
+  background-image: url("../images/submenu-arrow.svg");
   background-position: right 20px center;
   background-repeat: no-repeat;
   background-size: 8px 14px;
